--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -401,8 +401,6 @@ Error message and password prompt
 
 <li>douches froides</li>
 
-<li>Draft of 'pw'</li>
-
 <li>dualités</li>
 
 <li>DUVIVIER : Winston FREER, 17 familles d’effets magiques</li>
@@ -10201,7 +10199,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home [[Draft of 'pw']] $:/ControlPanel" title="$:/StoryList">
+<div created="20240118075123394" list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20240118075655714" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10255,11 +10253,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2144&quot;
+            &quot;text&quot;: &quot;1536&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1206&quot;
+            &quot;text&quot;: &quot;864&quot;
         }
     }
 }</pre>
@@ -10270,8 +10268,8 @@ pw
 <div created="20210313142548541" modified="20230519124255878" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20231219092000450" title="$:/temp/search">
-<pre>greenw</pre>
+<div created="20190114084246125" modified="20240118075652673" title="$:/temp/search">
+<pre>kid</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -11483,7 +11481,7 @@ sentiment = émotion x temps
 
 bonheur = joie x temps</pre>
 </div>
-<div created="20190725145732868" modified="20231103155339763" tags="dev" title="code snippets (java, git, kubectl / k8s ...)">
+<div created="20190725145732868" modified="20240109093421400" tags="dev" title="code snippets (java, git, kubectl / k8s ...)">
 <pre>! Java
 !! Java stream regroupement d'objets en Map&lt;A, B&gt; à partir d'une liste d'objets
 
@@ -11579,6 +11577,9 @@ git clone --branch &lt;branchname&gt; &lt;remote-repo-url&gt;
 
 !! rollback / revert un commit
 * git revert c02b0339
+
+!! reset pour se recaller sur l'état de develop
+* git reset --hard origin/develop
 
 !! git squash + rebase
 * git rebase -i HEAD~3
@@ -12636,181 +12637,6 @@ https://github.com/dail8859/NotepadNext
 * travaille la discipline / détermination
 * donne du peps</pre>
 </div>
-<div created="20190130144059269" draft.of="pw" draft.title="pw" modified="20231219092027997" tags="core" title="Draft of 'pw'">
-<pre>pw passw
-
-* cnpnet.cnp.fr =&gt;  CnpNet521t 
-* Cardif =&gt; [[ Cardif522t ]]
-
-
-```
-bitlocker	maisonfixe
-s****l_l*****e@ext.connect-tech.sncf	s422
-adm_sl*****e	a422
-vpn	s****l_l*****e
-office365	s****l_l*****e@ext.connect-tech.sncf
-wsl/ubuntu	slem u422
-instancemanager	admin/password
-```
-
-
-```
-cbp4you.fr &quot;cardiff&quot; saleya123c
-espaceadhesion.cbp-solutions.fr/#/main =&gt; 156800172230660012864
-caisse-epargne.fr 9872360441316688805986217889 / tel enfant sur 8 chiffres 56781234
-https://aude.ausy.fr/ =&gt; 11/18
-https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
-ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
-ouicse.com =&gt; sa.le@ausy.fr 121
-AUSY mail.google.com sa.le@ausy.fr ausy4/21
-intra.ausy.fr =&gt; 11/17 || 1/20 || 3/21 double
-webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 722
-cseausy.fr sa.le@ausyfr C521 double
-leno.1fr1.nt =&gt; A...n 2/20
-FREEBOX =&gt; 1/20
-free mobile =&gt; 12064238 6+22
-subscribe.free.fr/login =&gt; fbx18043933 521 alphanumonly / fbx27860631 bébé-terme (alphanumonly)
-youtube =&gt; osefgrr.la	5+22    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
-=&gt; osefosef@grr.la 2/20
-aliexpress =&gt; ali.s.lx.n 6/19
-impots.gouv.fr =&gt; 1200125072181 / i 5/17
-moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18 (obsolète, cf moncompteactivite)    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
-moncompteformation.gouv.fr =&gt; 1840144109775 M10/21
-gog.com =&gt; 3/17 gog13.o.osef@xoxy.net (aussi 12/18 gog.leno.osef@xoxy.net  mais inutile)
-cardmarket.com =&gt; 6/18 slemoine cardmarket.s.lemoine@xoxy.com
-paypal =&gt; 8/17 ebay.s.lemoine@xoxy.net
-ebay =&gt; 3/18 ebay.s.lemoine@xoxy.net
-illicado =&gt; ~~1/18 illicado.s.lemoine@xoxy.net~~ sa.le_a**y.fr 1223
-amazon =&gt; 1/14 amazon.s.lemoine@xoxy.net
-coffreo.com =&gt; samuel.lemoine@yahoo.com 8/18 
-facebook.com =&gt; 121
-yahoo.com =&gt; 6/20
-9gag =&gt; 9gag14.osef.osef@xoxy.net 12/14
-spamgourmet.net
-    leno.dalton =&gt; 4/17
-    samuel.lemoine =&gt; 6/17
-swdestinydb =&gt; 
-starwarsdestinyfr.forumactif.com =&gt; 7/17
-steam =&gt; lenopgm 5/20
-humble bundle =&gt; 4/18 humble.osef.osef@xoxy.net
-assure.ameli.fr =&gt; 1840144109775 a921
-    =&gt; 2 88 06 49 007 351 08 / ~~  &amp;'è&quot;è(-è
-CAF =&gt; 1469221 06062016
-IZY =&gt; http://dpparis.ozyclub.eu/?p=435 =&gt; 001368 / date de naissance JJMMAAAA
-ants.gouv.fr =&gt; G 2/18
-ulule =&gt; 3/18
-myedenred =&gt; E 3/18 edenred.s.lemoine@xoxy.net
-NGE =&gt; sl@y.com / 3/17 / https://mon.nge-nantes.fr/espace/stationnement
-natixis =&gt; natixis.s.lemoine@xoxy.net n° entreprise 06962 code serveur 14290097 mdp:00xxxxxx où xxxxxx=n°troll MH
-romaricbriand.fr/forum =&gt; romaricbriand.osef.osef@xoxy.net 6/18
-paypal =&gt; &lt;mail yahoo&gt;
-mondialrelay =&gt; samuel.lemoine@yahoo.com 11/17
-reddit =&gt; osefosefosef 9/18
-untap.in =&gt; leno 7/18
-bandai =&gt; bandai.s.lemoine@xoxy.net 9/18 /!\ PASSWORD : pas de carac spéciaux (remplacés par &quot;_&quot;) https://global.carddass.com/club/fr/bcc/menus
-caf.fr =&gt; caf.fr 1469221 / 06062016
-AON =&gt; aon.fr/sante https://monportailsante.aon.fr/aonadp/ 9872631 / 10/18 mais '=' remplacé par '+'
-http://www.mentalonews.com        mentalo.osef.osef@xoxy.net        11/18
-https://github.com/dashboard        lenopgm 12/18 / samuel-lemoine 3/21 / samuelemoine 3+/23 (ausyfr)
-macif          13229934 12/18
-epicgames =&gt; epicgames.osef.osef@xoxy.net 7/19
-kickstarter =&gt; veiel.osef.osef@xoxy.net 8/19
-fnac =&gt; fnac.s.lemoine@xoxy.net 8/19
-ecoledirecte.com =&gt; sjlemoine 9/19
-mondebio =&gt; mondebio.s.lemoine@xoxy.net 9/19
-cgb.fr =&gt; s.l@y.c 10/19
-riotgames.net =&gt; lenopgm / groudaf 12/19
-linkedin =&gt; 1/20
-pluralsight =&gt; s.l.y.c 1/20
-interepargne.natixis.fr =&gt; 14290097 [troll]00
-nantesmetropole.fr	metronantes.s.le@x.n	2/20
-https://formations.emergences.net/products/chaine-privee-gratuite-de-jjc saif.shahir@andyes.net 5/20
-https://club.conjuror.community/member-home/  conjuror.s.le@x.n 4/20 nospec / conjurfree.o.os@xn ?
-http://izy.yo.fr/Salarie/IzyFun/ 20200606103761sa.le@y.c 6BUDX4UL ou 5/20
-https://marketing-underground.teachable.com/ tugan.x.os@x.n 5/20
-https://lumo-france.com/philanthropie/the-shift-project/faire-un-don/choix-du-montant s.le@grla 5/20
-edf.s.le x.n 5/20
-trainline capitainetrain.s.le@x.n 5/20
-senscritique.fr =&gt; l.d@y.c 2/17
-forum corda =&gt; Osef os.x.corda@x.n S6/20
-heros.ws =&gt; 7/20
-affiliation.se-former.app/dashboard	7/20
-penguinmagic.s.le@x.n =&gt; 9/20
-gumroad.s.le@x.n =&gt; 9/20
-feedreader.com feedreader.os.os@xn =&gt; 920
-feedreader.com feedreadlight.os.os@xn =&gt; 920
-leboncoin =&gt; lbc20.s.le@xn920
-forum.marketingunderground.biz =&gt; sa.le@yc820
-lulu.com =&gt; lulu.s.le@xn920
-toutemonannee.com =&gt; toutemonannee.s.le@xn920
-klaxoon.com =&gt; s4l.l5e01-ext@p2e-e4i.fr 1120
-loireatlant.s.le@xn1120
-itch.io osefosef itchio.osef.o@xn1120
-famileo famileo.s.le@xn+1220
-vinted.s.le@xn+1220
-UnaLIVEdesdeCASA.com =&gt; gkaps.osef.os@xn+121
-scribd.com =&gt; osef@grr.la+221
-ecotree.s.le@xn+1220
-mail.com =&gt; osefosef+221
-1lib.fr / zlib =&gt; 1lib.os.os@xn221 pwA
-etsy =&gt; etsy.s.le@xn713
-dasan.co	osef@grr.la osefosef 221
-airbnb.s.le@xn818
-maxi-debrid.com &gt; osef@grr.la 221
-nantesmetropole.s.le@xn321
-PE esle0090 122
-PE Agate a222 long
-https://steve-s-school-76e5.thinkific.com/enrollments stevefaulkner.os.os@xn421
-petitbambou.com	osef@grr.la 421
-ranmagic.top =&gt; osefosefosef osefosefosef@grrla 1022
-nexusmods.com =&gt; osefnexusmods n621*2 osefosef[à)mail.com
-paybyphone.fr =&gt; paybyphone.s.le@xn 721
-gameontabletop =&gt; sa.le@yc 721
-laposte.fr =&gt; sa.le@yc 821
-erdnasemagicstore.io erdnasemagicstore.s.le@xnE821
-sncf/ter =&gt; sa.le@yc s323
-discord =&gt; sa.le@yc921
-zbigz.com =&gt; osefgrrla 122
-www3.yggtorrent.re =&gt; rcghgzms (122) / mail.com
-educartable =&gt; saleya 222
-doctolib =&gt; saleya 222
-blablacar.fr =&gt; saleya 222
-1_r + formation.xooit.f =&gt; Osef hypnomachie.osef.osef@xn 222 (! non protégé, en clair server !)
-cantine https://portail.berger-levrault.fr/MairieSaintMarsDeCoutais44680/accueil =&gt; l.j@gm.c BBle****e06*****6
-nitroflare.sle@xn322
-petitbambou sa.leàausyfr+p722
-bricklink.com sa.le@yac+722
-https://myr.renault.fr/ saleya+822
-lego.com osefosef+422
-boardgamegeek / rpggeek boardgamegeek.os.os@xn osefosef b2211
-drivethrurpg.com drivethrurpg.s.lexn 2111
-magictricks.io =&gt; magictricksio.o**f.o**fxn / o**fo**f / o**fo**f+1234
-openai / chatgpt =&gt; openai.o.o@xn2212é
-conso.lesboitesnomades.com/lunchbox =&gt; saleya l123
-bnp / 100297085197700215637834 troll456123
-diac =&gt; https://v2.mybattery.rcibanque.com/renault/ 1002218279 / troll
-ikea =&gt; :ikea.s.le-xn@523
-leetchi =&gt; leetchi.s.le-xn@523
-deviantart =&gt; deviantart.os.osxn623
-meetup =&gt; sale@a__yfr723m
-decathlon =&gt; DECATHLON.S.LE*xn 523d
-tidoo =&gt; tidoo.s.le*xn 923t
-greenweez =&gt; saleya 922g
-```
-
-
-```
-redford =&gt; outoforder
-viajero =&gt; monedas
-pocket =&gt; watch
-tresor =&gt; TigerTanCoin &amp; Tresorpreview
-reialme =&gt; kingdomcome
-insights =&gt; notevenreal
-themoves =&gt; marlo7d
-```
-
-</pre>
-</div>
 <div created="20220610152734611" modified="20220610152835134" tags="hypnomachie" title="dualités">
 <pre>* duel / monade
 * carte / territoire
@@ -12872,7 +12698,7 @@ racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/sal
 * les co-destinataires d'un mail groupé voient ton e-mail
 * se désinscrire d'une liste de diffusion confirme la validité de l'e-mail</pre>
 </div>
-<div created="20190412124207841" modified="20230920152202307" tags="kids" title="Emma kid talk">
+<div created="20190412124207841" modified="20240118075721823" tags="kids" title="Emma kid talk">
 <pre>* 	pop	&gt;&gt;	pomme
 * 	fafé	&gt;&gt;	café
 * 	kuk	&gt;&gt;	sucre
@@ -12905,6 +12731,7 @@ racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/sal
 * (Emma tu vas faire pipi stp) J'ai pas besoin j'ai déjà fais hier !
 * (à 7ans, à Cassandre) tu veux lire de la lecture ?
 * (7 ans) ça va maman, tu t'balades en nichon ?
+* (7 ans) (appuyée à sa fenêtre, chantant vers l'extérieur) Je chaaaante avec les oiseaaaaux ! (se tournant vers nous) J'adore la nature...
 </pre>
 </div>
 <div created="20221210110939316" modified="20221210111239490" tags="kids" title="Emmanuelle &amp; socialisation">
@@ -16774,7 +16601,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20231122083646288" tags="kids" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20240118075650159" tags="kids" title="Perçou kid talk Perceval">
 <pre>* a kapoté &gt;&gt;	le grain de beauté
 * a kakopel &gt;&gt;	le tractopelle
 * akatola &gt;&gt;	chocolat
@@ -16842,6 +16669,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 5ans : dans la salle de bain devant le miroir, on parle de la couleur des yeux d'Emmanuel, très noirs :
 ** Emmanuelle &gt; &quot;ah oui c'est vrai mes yeux ils sont ''super noirs''&quot;
 ** Perceval, qui aime bien être au centre de l'attention &amp; a les yeux bleus &gt; &quot;haaaan mes yeux ils sont ''super noirs et bleus''&quot;
+* 5ans : (en jouant au jeu &quot;deviner à quel animal je pense&quot;, après avoir demandé pour la 3ème fois sans succès &quot;est-ce que c'est un sanglier ?&quot;) : (fâché) Mais ! Faut quand même un jour inventer un sanglier ! Parce que ça fait partie des animals !
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -17233,7 +17061,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20231208085040338" tags="core" title="pw">
+<div created="20190130144059269" modified="20240109100928786" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17392,6 +17220,7 @@ deviantart =&gt; deviantart.os.osxn623
 meetup =&gt; sale@a__yfr723m
 decathlon =&gt; DECATHLON.S.LE*xn 523d
 tidoo =&gt; tidoo.s.le*xn 923t
+greenweez =&gt; saleya 922g
 ```
 
 
@@ -19543,7 +19372,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20231208112716181" tags="" title="stand-up ideas, punchlines...">
+<div created="20220829090335038" modified="20240118075538492" tags="" title="stand-up ideas, punchlines...">
 <pre>* arrêter / allaiter
 * karité / qualité
 * taboulé / tabouret
@@ -19564,6 +19393,10 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 * poil bien / poil pubien
 * le livre livre l'ivre
 * nouveau-né / nouveau nez
+* catapute
+* Marie, Maria, Marion, ''Marien'' / Julie, Julia, ''Julion'', Julien
+* faut les goûter / faut l'égouter
+* depuis hier, j'ai mal aux dents de devant =&gt; depuis Ivan, j'ai mal aux dents de derrière
 
 
 ```
