--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10199,7 +10199,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20240118075123394" list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20240118075655714" title="$:/StoryList">
+<div list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10268,8 +10268,8 @@ pw
 <div created="20210313142548541" modified="20230519124255878" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20240118075652673" title="$:/temp/search">
-<pre>kid</pre>
+<div created="20190114084246125" modified="20240126132804054" title="$:/temp/search">
+<pre>stand</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -17061,7 +17061,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20240109100928786" tags="core" title="pw">
+<div created="20190130144059269" modified="20240214132219757" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17194,7 +17194,7 @@ gameontabletop =&gt; sa.le@yc 721
 laposte.fr =&gt; sa.le@yc 821
 erdnasemagicstore.io erdnasemagicstore.s.le@xnE821
 sncf/ter =&gt; sa.le@yc s323
-discord =&gt; sa.le@yc921
+discord =&gt; _o**f_ sa.le@yc921
 zbigz.com =&gt; osefgrrla 122
 www3.yggtorrent.re =&gt; rcghgzms (122) / mail.com
 educartable =&gt; saleya 222
@@ -19372,7 +19372,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20240118075538492" tags="" title="stand-up ideas, punchlines...">
+<div created="20220829090335038" modified="20240131160623947" tags="" title="stand-up ideas, punchlines...">
 <pre>* arrêter / allaiter
 * karité / qualité
 * taboulé / tabouret
@@ -19397,6 +19397,8 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 * Marie, Maria, Marion, ''Marien'' / Julie, Julia, ''Julion'', Julien
 * faut les goûter / faut l'égouter
 * depuis hier, j'ai mal aux dents de devant =&gt; depuis Ivan, j'ai mal aux dents de derrière
+* déchéance d'échéances
+* il est contrôle freak / il est contre l'fric
 
 
 ```
