--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10197,13 +10197,13 @@ pw
 <div created="20190108104722609" modified="20230612154527594" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Recent</pre>
 </div>
-<div created="20190108101211875" modified="20230407092924864" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20190108101211875" modified="20240604081529642" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20240516071543465" list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20240516071543465" title="$:/StoryList">
+<div list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10225,7 +10225,7 @@ pw
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/OneDrive%20-%20SNCF%20CONNECT%20&amp;%20TECH/priv%C3%A9/perso/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10245,7 +10245,7 @@ pw
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/OneDrive%20-%20SNCF%20CONNECT%20&amp;%20TECH/priv%C3%A9/perso/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10257,11 +10257,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -17106,8 +17106,11 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20240430132227251" tags="core" title="pw">
+<div created="20190130144059269" modified="20240604081906901" tags="core" title="pw">
 <pre>pw passw
+
+* &gt;23: Z******Mois
+* &gt;624: Z******Sm s u b p
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
 * Cardif =&gt; [[ Cardif522t ]]
@@ -17251,7 +17254,7 @@ blablacar.fr =&gt; saleya 222
 cantine https://portail.berger-levrault.fr/MairieSaintMarsDeCoutais44680/accueil =&gt; l.j@gm.c BBle****e06*****6
 nitroflare.sle@xn322
 petitbambou sa.leàausyfr+p722
-bricklink.com sa.le@yac+722
+bricklink.com sa.le@yac+524
 https://myr.renault.fr/ saleya+822
 lego.com osefosef+422
 boardgamegeek / rpggeek boardgamegeek.os.os@xn osefosef b2211
