--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10227,7 +10227,7 @@ pw
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/OneDrive%20-%20SNCF%20CONNECT%20&amp;%20TECH/priv%C3%A9/perso/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10247,7 +10247,7 @@ pw
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/OneDrive%20-%20SNCF%20CONNECT%20&amp;%20TECH/priv%C3%A9/perso/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10259,11 +10259,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1632&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;918&quot;
         }
     }
 }</pre>
@@ -17114,7 +17114,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20240906135231769" tags="core" title="pw">
+<div created="20190130144059269" modified="20240929112440850" tags="core" title="pw">
 <pre>pw passw
 
 * &gt;23: Z******Mois
@@ -17262,7 +17262,7 @@ discord =&gt; _o**f_ sa.le@yc624
 zbigz.com =&gt; osefgrrla 122
 www3.yggtorrent.re =&gt; rcghgzms (122) / mail.com
 educartable =&gt; saleya 222
-doctolib =&gt; saleya 222
+doctolib =&gt; saleya 924
 blablacar.fr =&gt; saleya 222
 1_r + formation.xooit.f =&gt; Osef hypnomachie.osef.osef@xn 222 (! non protégé, en clair server !)
 cantine https://portail.berger-levrault.fr/MairieSaintMarsDeCoutais44680/accueil =&gt; l.j@gm.c BBle****e06*****6
