--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -226,6 +226,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -9543,6 +9545,9 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110141622189" modified="20230110141623789" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown">
 <pre>no</pre>
 </div>
+<div created="20250719164920101" modified="20250719164925890" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
 <div created="20230110124503324" modified="20230110124503324" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
@@ -9583,7 +9588,7 @@ very-muted-foreground: #849ebb</pre>
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/homeboard.tw.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/homeboard.tw.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9603,7 +9608,7 @@ very-muted-foreground: #849ebb</pre>
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/homeboard.tw.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/homeboard.tw.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9760,7 +9765,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230111181256170" modified="20230306143431444" shorttext="prépa maison Mars" tags="done" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/HJfT8QDv2" modified="20231124162233875" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/HJVjF6acj tid/HJfT8QDv2" modified="20250719164949440" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
 <div created="20230111103538724" modified="20230306143534945" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="done" title="diac">
@@ -9786,13 +9791,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]] tid/S1p6IQDw3" modified="20231124162233876" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]] tid/S1p6IQDw3 familiale tid/HknGcumJn tid/rkzwhJQsj tid/ryJXYT6cs tid/ryNnLQwD2" modified="20250719164949440" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20231124162233876" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="" list="[[prépa baptème]] [[isolation &amp; citemetry]]" modified="20250719164949440" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="tid/ryNnLQwD2" modified="20231124162233875" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="" modified="20250719164949440" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9806,13 +9811,13 @@ very-muted-foreground: #849ebb</pre>
 * ControlPanel &quot;⛭&quot; &gt; Appearance Toolbars &gt; View Toolbar
 </pre>
 </div>
-<div created="20230111124336323" modified="20230614113800060" shorttext="''familiale 6+''" tags="TODO" title="familiale">
+<div created="20230111124336323" modified="20250719164849866" shorttext="''familiale 6+''" tags="done" title="familiale">
 <pre></pre>
 </div>
 <div created="20230110162941854" dpbd-displaytext="no" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230306144010068" tags="" title="home board">
 <pre>&lt;$transclude tiddler=&quot;$:/plugins/reidgould/dpbd/templates/view/Board&quot; mode=&quot;inline&quot; /&gt;</pre>
 </div>
-<div created="20230111103633843" modified="20230112163456103" shorttext="isolation &amp; PAC" tags="[[todo JU]]" title="isolation &amp; citemetry">
+<div created="20230111103633843" modified="20250719164912214" shorttext="isolation &amp; PAC" tags="[[en cours JU]]" title="isolation &amp; citemetry">
 <pre>citemetry</pre>
 </div>
 <div created="20230111181107901" list="todo leno_done" modified="20230306143256708" tags="" title="leno">
@@ -9872,7 +9877,7 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181602780" modified="20230130081016025" shorttext="heroquest" tags="leno_done" title="tid/Hki1aO2cj">
 <pre></pre>
 </div>
-<div created="20230306143500255" modified="20230306143931077" shorttext="''MACIF / ZOE'' / achat batterie" tags="[[todo SAM]]" title="tid/HknGcumJn">
+<div created="20230306143500255" modified="20250719164858401" shorttext="''MACIF / ZOE'' / achat batterie" tags="done" title="tid/HknGcumJn">
 <pre>ZOE / MACIF / achat batterie</pre>
 </div>
 <div created="20230111181158784" modified="20230111181209230" shorttext="unstash tao" tags="todo" title="tid/rJDgndn9j">
@@ -9881,16 +9886,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181503979" modified="20230130081018106" shorttext="MYZ écran &amp; dés" tags="leno_done" title="tid/rkenhdh9i">
 <pre></pre>
 </div>
-<div created="20230116152513704" modified="20231124162233876" shorttext="utiliser chèques énergie" tags="[[todo SAM]]" title="tid/rkzwhJQsj">
+<div created="20230116152513704" modified="20250719164901250" shorttext="utiliser chèques énergie" tags="done" title="tid/rkzwhJQsj">
 <pre></pre>
 </div>
 <div created="20230111181133512" modified="20230111181155260" shorttext="stash sdpn" tags="todo" title="tid/ry60iO2co">
 <pre></pre>
 </div>
-<div created="20230112175327371" modified="20230112175338107" shorttext="BNP dez esprit libre" tags="backlog" title="tid/ryJXYT6cs">
+<div created="20230112175327371" modified="20250719164938916" shorttext="BNP dez esprit libre" tags="done" title="tid/ryJXYT6cs">
 <pre></pre>
 </div>
-<div created="20230614113819757" modified="20230724072308045" shorttext="dépôt CET" tags="[[en cours SAM]]" title="tid/ryNnLQwD2">
+<div created="20230614113819757" modified="20250719164949441" shorttext="dépôt CET" tags="done" title="tid/ryNnLQwD2">
 <pre></pre>
 </div>
 <div created="20230614113844863" modified="20230724072303974" shorttext="poser congés" tags="done" title="tid/S1p6IQDw3">
@@ -9928,16 +9933,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale" modified="20231124162233875" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation" modified="20250719164949440" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
 <div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230306143256708" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20231124162233875" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="" modified="20250719164949440" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn tid/rkzwhJQsj" modified="20231124162233876" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]]" modified="20250719164949440" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
